<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/curved_border"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:minHeight="100dp"
        android:text="@string/select_preferred_language"
        android:textColor="#31004A"
        android:textSize="22sp"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_bg2"
            android:gravity="center"
            android:minWidth="100dp"
            android:padding="10dp"
            android:text="@string/hindi"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/text_bg2"
            android:gravity="center"
            android:minWidth="100dp"
            android:padding="10dp"
            android:text="@string/eng"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>